<resources>
    <string name="app_name">Sugar Care</string>
    <string name="app_name_caps">SUGAR CARE</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen1">Onboarding screen 1</string>
    <string name="text_screen1">Ketahui sugar grade produk kemasan dan jaga asupan gula harian!</string>
    <string name="screen2">Onboarding screen 2</string>
    <string name="text_screen2">Cukup unggah foto dari produk kemasan buat dapatin informasi sugar grade.</string>
    <string name="next">Selanjutnya</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Kembali</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="jesica_sanditia">Jesica Sanditia</string>
    <string name="underline"><u>Jesicasanditia.sg@gmail.com</u></string>
    <string name="editprofile">Edit Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">User Profile</string>
    <string name="title_camera">Camera</string>
    <string name="gambar_produk_kemasan">Gambar Produk Kemasan</string>
    <string name="slash">/</string>
    <string name="yellowgrade">Gula Sedang</string>
    <string name="redgrade">Gula Tinggi</string>
    <string name="greengrade">Rendah Gula</string>
    <string name="tab_myconsumption">Konsumsi Saya</string>
    <string name="tab_producthistory">Riwayat Produk</string>
    <string name="tab_sugargrade">Sugar Grade</string>
    <string name="tab_otherinfo">Informasi Lainnya</string>
    <string name="information">Informasi</string>
    <string name="menu1">Unggah gambar produk kemasan dari galeri &amp; lihat sugar grade-nya!</string>
    <string name="menu2">Cari tahu apa itu sugar grade di sini!</string>
    <string name="menu3">Report Konsumsi Gula </string>
    <string name="clickhere">Klik di sini</string>
    <string name="searchbar_hint">Masukkan nama produk</string>
    <string name="searchbar_hint_month_week">Masukkan nama bulan dan tahun</string>
    <string name="searchbar_hint_year">Masukkan tahun</string>
    <string name="history">Riwayat Produk Yang Dicari</string>
    <string name="appbar">Appbar Title</string>
    <string name="sugar_grade">Sugar Grade</string>
    <string name="gula_tinggi">Gula tinggi</string>
    <string name="desc_redgrade">Produk ini mengandung kadar gula yang TINGGI. Disarankan untuk mengonsumsinya dengan hati-hati dan membatasi asupan gula harian Anda sesuai dengan rekomendasi WHO, yaitu tidak lebih dari 50 gram per hari.</string>
    <string name="desc_yellowgrade">Produk ini mengandung kadar gula yang SEDANG. Meskipun aman, tetap disarankan untuk mengonsumsinya dengan bijak dan memperhatikan asupan gula harian Anda sesuai dengan rekomendasi WHO, yaitu tidak lebih dari 50 gram per hari.</string>
    <string name="desc_greengrade">Produk ini mengandung kadar gula yang RENDAH. Aman untuk dikonsumsi, tetapi tetap perhatikan asupan gula harian Anda agar tetap sesuai dengan rekomendasi WHO, yaitu kurang dari 50 gram per hari.</string>
    <string name="consume_product">Konsumsi Produk Ini</string>
    <string name="dummy_info">Produk ini mengandung total gula sebanyak 23 gram per takaran saji 200 ml. Jika  kamu mengonsumsinya, pastikan asupan gula lainnya hari ini tidak lebih dari 27 gram untuk menjaga konsumsi gula tetap sesuai dengan rekomendasi harian.</string>
    <string name="title_rec">Temukan produk serupa dengan sugar grade yang lebih rendah!</string>
    <string name="message_alert_redgrade">Kadar gula produk ini sangat tinggi dan dapat meningkatkan risiko kesehatan. Pilihlah produk dengan kadar gula yang lebih rendah.</string>
    <string name="title_alert_redgrade">Sugar Grade : Merah</string>
    <string name="message_alert_yellowgrade">Kadar gula produk ini cukup tinggi. Sebaiknya dikonsumsi dengan bijak untuk menjaga keseimbangan asupan gula harian.</string>
    <string name="title_alert_yellowgrade">Sugar Grade : Kuning</string>
    <string name="message_alert_greengrade">Kadar gula produk ini aman untuk dikonsumsi. Anda dapat menikmatinya tanpa khawatir akan asupan gula berlebih.</string>
    <string name="title_alert_greengrade">Sugar Grade : Hijau</string>
    <string name="message_alert_unknowngrade">Kadar gula produk ini tidak diketahui.</string>
    <string name="title_alert_unknowngrade">Sugar Grade : Unknown</string>
    <string name="message_alert_warngrade">Jika kamu mengonsumsi produk ini, total konsumsi gulamu hari ini akan melebihi batas harian yang disarankan (50 gram). Pertimbangkan kembali sebelum melanjutkan.</string>
    <string name="title_alert_warngrade">Peringatan Konsumsi Gula Berlebih</string>
    <string name="appbar_report">Report Konsumsi Gula</string>
    <string name="appbar_weekly_report">Weekly Report</string>
    <string name="appbar_monthly_report">Monthly Report</string>
    <string name="appbar_yearly_report">Yearly Report</string>
    <string name="title_today_report">Konsumsi Gula  Hari Ini</string>
    <string name="dummy_26g">26</string>
    <string name="dummy_50g">50</string>
    <string name="gram">g</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="monthly_report">Monthly\nReport</string>
    <string name="yearly_report">Yearly\nReport</string>
    <string name="dummy_minggu">Minggu 1 Desember 2024</string>
    <string name="dummy_bulan_tahun">Desember 2024</string>
    <string name="dummy_tahun">2024</string>
    <string name="dummy_weeklyrep">01 - 07 Desember 2024</string>
    <string name="dummy_yearlyrep">Tahun 2024</string>
    <string name="info_bar_weekreport">Warna pada barchart menunjukkan tingkat konsumsi gula harian. Hijau berarti aman (≤ 50g), sedangkan merah menunjukkan konsumsi melebihi batas aman (> 50g).</string>
    <string name="info_bar_monthreport">Warna pada barchart menunjukkan tingkat konsumsi gula harian. Hijau berarti aman, sedangkan merah menunjukkan konsumsi melebihi batas aman pada minggu tersebut.</string>
    <string name="info_bar_yearreport">Warna pada barchart menunjukkan tingkat konsumsi gula harian. Hijau berarti aman, sedangkan merah menunjukkan konsumsi melebihi batas aman pada bulan tersebut.</string>
    <string name="logout">Logout</string>
    <string name="conf_password">Password confirmation</string>
    <string name="fill_this_field">Please fill this field</string>
    <string name="pass_match">Passwords do not match</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="name">Nama</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="done">Done</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="sugargradedef">Sugar Grade adalah sistem penilaian kadar gula pada minuman, dibagi menjadi 3 kategori: Hijau (rendah), Kuning (sedang), dan Merah (tinggi). Tujuannya adalah membantu Anda memilih minuman yang lebih sehat dan mencegah konsumsi gula berlebihan.</string>
    <string name="hijau">Hijau</string>
    <string name="kuning">Kuning</string>
    <string name="merah">Merah</string>
    <string name="rendah">Rendah</string>
    <string name="sedang">Sedang</string>
    <string name="tinggi">Tinggi</string>
    <string name="tabel_kriteria_minuman">Tabel Kriteria untuk Minuman Kemasan</string>
    <string name="hijau_drink">≤ 2.5 gram gula per 100 mL</string>
    <string name="kuning_drink"><![CDATA[> 2.5 – 11.25 gram gula per 100 mL]]></string>
    <string name="merah_drink"><![CDATA[> 11.25 gram gula per 100 mL atau > 13.5 gram per porsi (berlaku untuk ukuran sajian > 150 mL)]]></string>
    <string name="hijau_food">≤ 5.0 gram gula per 100 gram</string>
    <string name="kuning_food"><![CDATA[> 5.0 – 22.5 gram gula per 100 gram]]></string>
    <string name="merah_food"><![CDATA[> 22.5 gram gula per 100 gram atau> 27 gram per porsi (berlaku untuk ukuran sajian > 100 gram)]]></string>
    <string name="warna">Warna</string>
    <string name="kategori">Kategori</string>
    <string name="kriteria">Kriteria</string>
    <string name="kriteria_makanan_kemasan">Tabel Kriteria untuk Makanan Kemasan</string>
    <string name="saran_produk_baru">Saran Produk Baru</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="grsugar">Kandungan Gula Per Sajian</string>
    <string name="netweight">Berat Bersih</string>
    <string name="servings">Jumlah Sajian Per Kemasan</string>
    <string name="servingsVol">Volume Sajian Per Kemasan</string>
    <string name="category">Kategori Produk</string>
    <string name="addPict">Tambahkan Gambar Produk</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="submit">Kirim</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="sproduct_errormessage">Silakan ambil gambar terlebih dahulu</string>

</resources>
