<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".presentation.feature.scinfo.SugarInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/baseline_arrow_back_ios_24">

                <TextView
                    android:id="@+id/title"
                    style="@style/Theme.SugarCare.Poppins_16_bold_onSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sugar_grade" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/explanation"
            style="@style/Theme.SugarCare.Poppins_12_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/sugargradedef" />

        <TextView
            android:id="@+id/title_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/tabel_kriteria_minuman"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="8dp"
            android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/warna"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/kategori"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/kriteria"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Baris 1 - Hijau (Rendah) -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e6ffe6"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/hijau" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/rendah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/hijau_drink" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffcc"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/kuning" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/sedang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/kuning_drink" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffe6e6"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/merah" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/tinggi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/merah_drink" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/kriteria_makanan_kemasan"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- TableLayout -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="8dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/warna"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/kategori"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/kriteria"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e6ffe6"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/hijau" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/rendah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/hijau_food" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffcc"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/kuning" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/sedang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/kuning_food" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffe6e6"
                android:padding="8dp">

                <TextView
                    android:padding="8dp"
                    android:text="@string/merah" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/tinggi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:text="@string/merah_food" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>