<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.screen.Screen1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="258dp"
            android:layout_height="250dp"
            android:src="@drawable/screen1"
            android:contentDescription="@string/screen1"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_screen1"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/next"
        android:layout_gravity="bottom|center_horizontal"/>

</FrameLayout>