<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    tools:context=".presentation.feature.screen.Screen2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="258dp"
            android:layout_height="250dp"
            android:src="@drawable/screen2"
            android:contentDescription="@string/screen1"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            style="@style/Theme.SugarCare.Poppins_12_bold_onPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_screen2"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            style="@style/Theme.SugarCare.Poppins_12_regular"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/next"
            style="@style/Button_Secondary_12_regular" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/sign_in"
            style="@style/Button_Primary_12_regular" />

    </LinearLayout>

</FrameLayout>