<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:background="@color/background"
    tools:context=".presentation.feature.userprofile.UserProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_person_24"
        app:civ_border_color="@color/theme_secondary"
        app:civ_border_width="1dp" />

    <TextView
        style="@style/Theme.SugarCare.Poppins_12_bold_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/jesica_sanditia" />

    <TextView
        style="@style/Theme.SugarCare.Poppins_12_normal_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/underline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        style="@style/Button_Secondary_12_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editprofile"
        app:backgroundTint="@null" />

    
</LinearLayout>